--- a/slides/14-model-diagnostics.qmd
+++ b/slides/14-model-diagnostics.qmd
@@ -199,7 +199,7 @@ $$
 ::: incremental
 -   The MLE $\tilde{\boldsymbol{\beta}}$ is equivalent to the least-squares estimator $\hat{\boldsymbol{\beta}}$ , when the errors follow independent and identical normal distributions
 
--   This means the least-squares estimator $\hat{\mathbf{\boldsymbol{\beta}}}$ and inherit all the nice properties of MLEs
+-   This means the least-squares estimator $\hat{\mathbf{\boldsymbol{\beta}}}$ inherits all the nice properties of MLEs
 
     -   Consistency
     -   Efficiency - minimum variance among all consistent estimators
@@ -218,7 +218,7 @@ $$
 
 Today's data contains a subset of the original Duke Lemur data set available in the [TidyTuesday GitHub repo](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-08-24/readme.md). This data includes information on “young adult” lemurs from the [Coquerel’s sifaka species](https://lemur.duke.edu/discover/meet-the-lemurs/coquerels-sifaka/) (PCOQ), the largest species at the Duke Lemur Center. The analysis will focus on the following variables:
 
--   `age_at_wt_mo`: Age in days: Age of the animal when the weight was taken, in days (Wei ght_Date-DOB)
+-   `age_at_wt_mo`: Age in months: Age of the animal when the weight was taken, in months (((Weight_Date-DOB)/365)\*12)
 
 -   `weight_g`: Weight: Animal weight, in grams. Weights under 500g generally to nearest 0.1-1g; Weights \>500g generally to the nearest 1-20g.
 
@@ -352,33 +352,38 @@ p1 + p2
 -   These points can sometimes be identified in a scatterplot if there is only one predictor variable
     -   This is often not the case when there are multiple predictors
 -   We will use measures to quantify an individual observation's influence on the regression model
-    -   **leverage**, **standardized residuals**, and **Cook's distance**
+    -   **leverage**, **standardized & studentized residuals**, and **Cook's distance**
 :::
 
 # Leverage
 
 ## Hat matrix
 
+::: incremental
 -   Recall the **hat matrix** $\mathbf{H} = \mathbf{X}(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T$
 
 -   We've seen that $\mathbf{H}$ is used to compute $Var(\hat{\mathbf{y}}) = \sigma^2_{\epsilon}\mathbf{H}$ and $Var(\mathbf{e}) = \sigma^2_{\epsilon}(\mathbf{I} - \mathbf{H})$
 
--   An element of $\mathbf{H}$, $h_{ij}$, is the leverage of the observation $y_i$ on the fitted values $\hat{y}_{ij}$
+-   An element of $\mathbf{H}$, $h_{ij}$, is the leverage of the observation $y_i$ on the fitted values $\hat{y}_{j}$
+:::
 
 ## Leverage
 
+::: incremental
 -   We focus on the diagonal elements
 
     $$
     h_{ii} = \mathbf{x}_i^T(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{x}_i
     $$such that $\mathbf{x}^T_i$ is the $i^{th}$ row of $\mathbf{X}$
 
--   $h_{ii}$ is the **leverage**: a measure of the distance of the $i^{th}$ observation from the center (or centroid) of $x$ space
+-   $h_{ii}$ is the **leverage**: a measure of the distance of the $i^{th}$ observation from the center (or centroid) of the $x$ space
 
 -   Observations with large values of $h_{ii}$ are far away from the typical value (or combination of values) of the <u>predictors</u> in the data
+:::
 
 ## Large leverage
 
+::: incremental
 -   The sum of the leverages for all points is $p + 1$, where $p$ is the number of predictors in the model . More specifically
 
     $$
@@ -388,6 +393,7 @@ p1 + p2
 -   The average value of leverage, $h_{ii}$, is $\bar{h} =  \frac{(p+1)}{n}$
 
 -   An observation has **large leverage** if $$h_{ii} > \frac{2(p+1)}{n}$$
+:::
 
 ## Lemurs: Leverage
 
@@ -395,6 +401,8 @@ p1 + p2
 h_threshold <- 2 * 2 / nrow(lemurs)
 h_threshold
 ```
+
+. . .
 
 ```{r}
 lemurs_aug |>
@@ -439,19 +447,23 @@ If there is point with high leverage, ask
 
 Just because a point has high leverage does not necessarily mean it will have a substantial impact on the regression. Therefore we need to check other measures.
 
-## 
-
 # Scaled residuals
 
 ## Scaled residuals
 
+::: incremental
 -   What is the best way to identify outlier points that don't fit the pattern from the regression line?
+
     -   Look for points that have large residuals
+
 -   We can rescale residuals and put them on a common scale to more easily identify "large" residuals
+
 -   We will consider two types of scaled residuals: standardized residuals and studentized residuals
+:::
 
 ## Standardized residuals
 
+::: incremental
 -   The variance of the residuals can be estimated by the mean squared residuals (MSR) $= \frac{SSR}{n - p - 1} = \hat{\sigma}^2_{\epsilon}$
 
 -   We can use MSR to compute **standardized residuals**
@@ -461,11 +473,13 @@ Just because a point has high leverage does not necessarily mean it will have a 
     $$
 
 -   Standardized residuals are produced by `augment()` in the column `.std.resid`
+:::
 
 ------------------------------------------------------------------------
 
 ## Studentized residuals
 
+::: incremental
 -   MSR is an approximation of the variance of the residuals.
 
 -   The variance of the residuals is $Var(\mathbf{e}) = \sigma^2_{\epsilon}(\mathbf{I} - \mathbf{H})$
@@ -473,6 +487,7 @@ Just because a point has high leverage does not necessarily mean it will have a 
     -   The variance of the $i^{th}$ residual is $Var(e_i) = \sigma^2_{\epsilon}(1 - h_{ii})$
 
 -   The **studentized residual** is the residual rescaled by the more exact calculation for variance
+:::
 
 $$
 r_i = \frac{e_{i}}{\sqrt{\hat{\sigma}^2_{\epsilon}(1 - h_{ii})}}
@@ -487,11 +502,13 @@ We can examine the standardized residuals directly from the output from the `aug
 ```{r}
 #| echo: false
 #| label: std residuals vs fitted
+#| fig-align: center
 
 
 ggplot(data = lemurs_aug, aes(x = .fitted, y = .std.resid)) + 
   geom_point() +
-  geom_hline(yintercept = 0, color = "red", linetype =2)+
+  geom_hline(yintercept = 3, color = "red", linetype =2)+
+  geom_hline(yintercept = -3, color = "red", linetype = 2) +
   labs(x  = "Fitted values",
        y = "Std. Residuals",
        title = "Standardized residuals vs. fitted")
@@ -548,7 +565,7 @@ This measure is a combination of
 
 ## Using Cook's Distance
 
--   An observation with large $D_i$ is said to have a strong influence on the predicted values
+-   An observation with large value of $D_i$ is said to have a strong influence on the predicted values
 
 -   General thresholds .An observation with
 
@@ -580,23 +597,27 @@ lemurs_aug |>
 
 ## What to do with outliers/influential points?
 
+::: incremental
 -   First consider if the outlier is a result of a data entry error.
 
--   If not, you may consider dropping an observation if it's an outlier in the predictor variables if...
+-   If not, you may consider dropping an observation if it's an outlier in the <u>predictor</u> variables if...
 
     -   It is meaningful to drop the observation given the context of the problem
 
     -   You intended to build a model on a smaller range of the predictor variables. Mention this in the write up of the results and be careful to avoid extrapolation when making predictions
+:::
 
 ## What to do with outliers/influential points?
 
--   It is generally **not** good practice to drop observations that ar outliers in the value of the response variable
+::: incremental
+-   It is generally **not** good practice to drop observations that ar outliers in the value of the <u>response</u> variable
 
     -   These are legitimate observations and should be in the model
 
     -   You can try transformations or increasing the sample size by collecting more data
 
 -   A general strategy when there are influential points is to fit the model with and without the influential points and compare the outcomes
+:::
 
 ------------------------------------------------------------------------
 
