--- a/slides/15-multicollinearity.qmd
+++ b/slides/15-multicollinearity.qmd
@@ -35,6 +35,10 @@ bibliography: references.bib
 
 -   Lab 04 due Thursday at 11:59pm
 
+-   Team Feedback (from TEAMMATES) due Thursday at 11:59pm
+
+-   [Mid semester survey](https://duke.qualtrics.com/jfe/form/SV_244HYi8U8X85pgW) (strongly encouraged!) by Thursday at 11:59pm
+
 -   Looking ahead
 
     -   Project: Exploratory data analysis due October 31
@@ -42,6 +46,16 @@ bibliography: references.bib
     -   Statistics experience due Tuesday, November 26
 
 ## Spring 2025 statistics classes
+
+-   STA 230, STA 231 or STA 240: Probability
+
+-   STA 310: Generalized Linear Models
+
+-   STA 323: Statistical Computing
+
+-   STA 360: Bayesian Inference and Modern Statistical Methods
+
+-   STA 432: Theory and Methods of Statistical Learning and Inference
 
 ## Computing set up
 
@@ -54,7 +68,7 @@ library(tidyverse)
 library(tidymodels)  
 library(knitr)       
 library(patchwork)
-library(GGally) #for scatterplot matrix
+library(GGally) #for pairwise plot matrix
 
 
 # set default theme in ggplot2
@@ -75,9 +89,9 @@ ggplot2::theme_set(ggplot2::theme_bw())
 
 -   Variable transformations
 
-## Data: `rail_trail` {.midi}
+## Data: Trail users {.midi}
 
--   The Pioneer Valley Planning Commission (PVPC) collected data for ninety days from April 5, 2005 to November 15, 2005.
+-   The Pioneer Valley Planning Commission (PVPC) collected data at the beginning a trail in Florence, MA for ninety days from April 5, 2005 to November 15, 2005 to
 -   Data collectors set up a laser sensor, with breaks in the laser beam recording when a rail-trail user passed the data collection station.
 
 ```{r}
@@ -86,7 +100,7 @@ ggplot2::theme_set(ggplot2::theme_bw())
 #| warning: false
 
 rail_trail <- read_csv(here::here("slides", "data/rail_trail.csv"))
-rail_trail
+rail_trail |> slice(1:5)
 ```
 
 Source: [Pioneer Valley Planning Commission](http://www.fvgreenway.org/pdfs/Northampton-Bikepath-Volume-Counts%20_05_LTA.pdf) via the **mosaicData** package.
@@ -95,7 +109,7 @@ Source: [Pioneer Valley Planning Commission](http://www.fvgreenway.org/pdfs/Nort
 
 **Outcome**:
 
-`volume` estimated number of trail users that day (number of breaks recorded)
+-   `volume` estimated number of trail users that day (number of breaks recorded)
 
 **Predictors**
 
@@ -109,7 +123,7 @@ Source: [Pioneer Valley Planning Commission](http://www.fvgreenway.org/pdfs/Nort
 
 ## EDA: Relationship between predictors
 
-We can create a scatterplot matrix using the `ggpairs` function from the **GGally** R package
+We can create a pairwise plot matrix using the `ggpairs` function from the **GGally** R package
 
 ```{r}
 #| eval: false
@@ -131,21 +145,22 @@ rail_trail |>
 ```
 
 ::: question
-What looks like a potential concern with a model that uses high temperature, average temperature, season, and precipitation to predict volume?
+What might be a potential concern with a model that uses high temperature, average temperature, season, and precipitation to predict volume?
 :::
 
 # Multicollinearity
 
 ## Multicollinearity
 
--   Predictors are orthogonal when there is no linear relationship (dependence) between the predictors
+-   Ideally there is no linear relationship (dependence) between the predictors
 
     -   This is generally not the case in practice but is often not a major issue
 
 -   **Multicollinearity**: there are near-linear dependencies between predictors
 
-## Common causes of multicollinearity
+## Common sources of multicollinearity
 
+::: incremental
 -   Dependencies that generally occur in the population
 
 -   How the model is defined and the variables that are included
@@ -153,28 +168,17 @@ What looks like a potential concern with a model that uses high temperature, ave
 -   Sample comes from only a subspace of the region of predictors
 
 -   There are more predictor variables than observations
+:::
 
 ## Detecting multicollinearity
 
--   **Variance Inflation Factor (VIF)**: Measure of multicollinearity in the regression model
+-   **Variance Inflation Factor (VIF)**: measure of multicollinearity in the regression model
 
 $$
 VIF_j = \frac{1}{1 - R^2_j}
 $$
 
 where $R^2_j$ is the proportion of variation in $x_j$ that is explained by a linear combination of all the other predictors
-
-## Effects of multicollinearity
-
--   Large variance $(\hat{\sigma}^2_{\epsilon}(\mathbf{X}^T\mathbf{X})^{-1})$ in the model coefficients
-
-    -   Different combinations of coefficient estimates produce equally good model fits
-
--   Unreliable statistical inference results
-
-    -   May conclude coefficients are not statistically significant when there is, in fact, a relationship
-
--   Interpretation of coefficient is no longer while holding all other variables constant, since this would be impossible for correlated predictors
 
 ## Detecting multicollinearity
 
@@ -184,15 +188,28 @@ where $R^2_j$ is the proportion of variation in $x_j$ that is explained by a lin
 
 -   Use the `vif()` function in the **rms** R package to calculate VIF
 
+## Effects of multicollinearity
+
+::: incremental
+-   Large variance $(\hat{\sigma}^2_{\epsilon}(\mathbf{X}^T\mathbf{X})^{-1})$ in the model coefficients
+
+    -   Different combinations of coefficient estimates produce equally good model fits
+
+-   Unreliable statistical inference results
+
+    -   May conclude coefficients are not statistically significant when there is, in fact, a relationship between the predictors and response
+
+-   Interpretation of coefficient is no longer "holding all other variables constant", since this would be impossible for correlated predictors
+:::
+
 # Application exercise
 
 ## Dealing with multicollinearity
 
--   Collect more data
+::: incremental
+-   Collect more data (often not feasible given practical constraints)
 
-    -   Often not feasible given practical constraints
-
--   Respecify the correlated predictors to keep the information from predictors but eliminate collinearity
+-   Redefine the correlated predictors to keep the information from predictors but eliminate collinearity
 
     -   e.g., if $x_1, x_2, x_3$ are correlated, use a new variable $(x_1 + x_2) / x_3$ in the model
 
@@ -201,12 +218,13 @@ where $R^2_j$ is the proportion of variation in $x_j$ that is explained by a lin
 -   Remove one of the correlated variables
 
     -   Be careful about substantially reducing predictive power of the model
+:::
 
 # Application exercise
 
 # Variable transformations
 
-## Respiratory Rate vs. Age {.midi}
+## Data: Respiratory Rate vs. Age {.midi}
 
 -   A high respiratory rate can potentially indicate a respiratory infection in children. In order to determine what indicates a "high" rate, we first want to understand the relationship between a child's age and their respiratory rate.
 
@@ -281,6 +299,65 @@ p4 <- ggplot(data=respiratory, aes(x=log_age, y=log_rate)) +
 (p1 + p2) / (p3 + p4)
 ```
 
+# Transformation on $Y$
+
+## Identifying a need to transform Y
+
+::: incremental
+-   Typically, a “fan-shaped” residual plot indicates the need for a transformation of the response variable Y
+
+    -   There are multiple ways to transform a variable, e.g., Y, 1/Y, log⁡(Y)
+
+    -   log⁡(Y) the most straightforward to interpret, so we use that transformation when possible
+
+```{=html}
+<!-- -->
+```
+-   When building a model:
+
+    -   Choose a transformation and build the model on the transformed data
+
+    -   Reassess the residual plots
+
+    -   If the residuals plots did not sufficiently improve, try a new transformation!
+:::
+
+## Log transformation on $Y$
+
+-   If we apply a log transformation to the response variable, we want to estimate the parameters for the statistical model
+
+$$
+\log(y_i) = \beta_0+ \beta_1 x_{i1} + \dots +\beta_px_{ip} + \epsilon_i, \hspace{10mm} \epsilon \sim N(0,\sigma^2_\epsilon)
+$$
+
+-   The regression equation is
+
+$$\widehat{\log(y_i)} = \hat{\beta}_0+ \hat{\beta}_1 x_{i1} + \dots + \hat{\beta}_px_{ip}$$
+
+## Log transformation on $Y$
+
+We want to interpret the model in terms of the original variable $Y$, not $\log(Y)$, so we need to write the regression equation in terms of $Y$
+
+$$\begin{align}\hat{y_i} &= \exp\{\hat{\beta}_0 + \hat{\beta}_1 x_{i1} + \dots + \hat{\beta}_Px_{ip}\}\\ &= \exp\{\hat{\beta}_0\}\exp\{\hat{\beta}_1x_{i1}\}\dots\exp\{\hat{\beta}_px_{ip}\}\end{align}$$
+
+::: callout-note
+The predicted value $\hat{y_i}$ is the predicted *median* of $Y$. Note, when the distribution of $y_i|x_1, \ldots, x_p$ is symmetric, then the median equals the mean. (See notes at the end for more details)
+:::
+
+## Model interpretation {.midi}
+
+$$\begin{align}\hat{y_i} &= \exp\{\hat{\beta}_0 + \hat{\beta}_1 x_{1p} + \dots + \hat{\beta}_Px_{ip}\}\\ &= \exp\{\hat{\beta}_0\}\exp\{\hat{\beta}_1x_{i1}\}\dots\exp\{\hat{\beta}_px_{ip}\}\end{align}$$
+
+. . .
+
+-   **Intercept**: When $x_{i1} = \dots = x_{ip} =0$, $y_i$ is expected to be $\exp\{\hat{\beta}_0\}$
+
+-   **Slope:** For every one unit increase in $x_{ij}$, $y_{i}$ is expected to multiply by a factor of $\exp\{\hat{\beta}_j\}$, holding all else constant
+
+::: question
+Why is the interpretation in terms of a multiplicative change?
+:::
+
 ## Model 2: log(Rate) vs. Age
 
 ```{r}
@@ -294,9 +371,11 @@ tidy(resp_logy_fit) |>
 
 <br>
 
--   **Slope:** For each additional month in a child's age, the median respiratory rate is expected to multiply by a factor of `r round(exp(-0.018), 3)` \[exp(-0.018)\].
+::: question
+-   Interpret the intercept in terms of (1) `log(Rate)` and (2) `Rate`.
 
--   **Intercept:** The median respiratory rate for children who are 0 months old is expected to be `r round(exp(3.381), 3)` \[exp(3.381)\].
+-   Interpret the effect of `Age` in terms of (1) `log(Rate)` and (2) `Rate`.
+:::
 
 ## Model 2: Residuals
 
@@ -345,7 +424,7 @@ geom_hline(yintercept=0,color="red") +
   ylab("residuals") 
 ```
 
-```{r, echo = F, fig.height = 2.5}
+```{r, echo = F}
 p1 + p2 + plot_annotation(title = "Example data")
 ```
 
@@ -365,15 +444,17 @@ ggplot(data= respiratory,aes(x=log_age,y=Rate)) +
 
 Suppose we have the following regression equation:
 
-$$\hat{Y} = \hat{\beta}_0 + \hat{\beta}_1 \log(X)$$
+$$\hat{y}_i = \hat{\beta}_0 + \hat{\beta}_1 \log(x_i)$$
 
 . . .
 
--   **Intercept:** When $X = 1$ $(\log(X) = 0)$, $Y$ is expected to be $\hat{\beta}_0$ (i.e. the mean of $Y$ is $\hat{\beta}_0$)
+::: incremental
+-   **Intercept:** When $x_i = 1$ $(\log(x_i) = 0)$, $y_i$ is expected to be $\hat{\beta}_0$ (i.e. the mean of $y_i$ is $\hat{\beta}_0$)
 
--   **Slope:** When $X$ is multiplied by a factor of $\mathbf{C}$, the mean of $Y$ is expected to increase by $\boldsymbol{\hat{\beta}_1}\mathbf{\log(C)}$ units
+-   **Slope:** When $x_i$ is multiplied by a factor of $\mathbf{C}$, the mean of $y_i$ is expected to increase by $\hat{\beta}_1\log(C)$ units
 
-    -   **Example**: when $X$ is multiplied by a factor of 2, $Y$ is expected to increase by $\boldsymbol{\hat{\beta}_1}\mathbf{\log(2)}$ units
+    -   **Example**: when $x_i$ is multiplied by a factor of 2, $y_i$ is expected to increase by $\hat{\beta}_1}\mathbf{\log(2)$ units
+:::
 
 ## Model 3: Rate vs. log(Age)
 
@@ -389,11 +470,6 @@ tidy(resp_logx_fit) |>
 ::: question
 Interpret the slope and intercept in the context of the data.
 :::
-
-```{r}
-#| echo: false
-countdown::countdown(minutes = 4)
-```
 
 ## Model 3: Residuals
 
