--- a/hw/hw-03.qmd
+++ b/hw/hw-03.qmd
@@ -1,5 +1,138 @@
 ---
-title: HW 03
+title: "HW 03:  Multiple linear regression cont'd"
+
+bibliography: references.bib
 ---
 
-To be posted.
+::: callout-important
+## Due date
+
+This assignment is due on **Thursday, October 31s at 11:59pm.**
+:::
+
+# Introduction
+
+<!--# Update the introduction-->
+
+# **Learning goals**
+
+In this assignment, you will…
+
+<!--# update the learning goals-->
+
+# **Getting started**
+
+-   Go to the [sta221-fa24](https://www.github.com/sta221-fa24) organization on GitHub. Click on the repo with the prefix **hw-03**. It contains the starter documents you need to complete the lab.
+
+-   Clone the repo and start a new project in RStudio. See the [Lab 01 instructions](https://sta221-fa24.netlify.app/labs/lab-01#clone-the-repo-start-new-rstudio-project) for details on cloning a repo and starting a new project in R.
+
+# Packages
+
+The following packages are used in this assignment:
+
+```{r}
+#| include: false
+
+library(tidyverse)
+library(tidymodels)
+library(knitr)
+
+# load other packages as needed
+```
+
+# Conceptual exercises
+
+## Instructions
+
+The conceptual exercises are focused on explaining concepts and showing results mathematically. Show your work for each question.\
+\
+**You may write the answers and associated work for conceptual exercises by hand or type them in your Quarto document.**
+
+## Exercise 1
+
+<!--# from Ex 7.11 (pg. 356 in Casella Berger-->
+
+Let $x_1, \ldots, x_n$ be independently and identically distributed (i.i.d.) sample observations from a distribution where
+
+$$
+f(x | \theta) = \theta x^{\theta - 1} \hspace{8mm} 0\leq x\leq 1, \hspace{3mm} 0 < \theta < \infty
+$$
+
+Find the maximum likelihood estimator (MLE) of $\theta$.
+
+## Exercise 2
+
+<!--# Ex 7.19 (pg. 358) of Casella Berger-->
+
+Suppose you have the linear regression model
+
+$$
+y_i = \beta x_i + \epsilon_i \hspace{8mm} \epsilon \sim N(0, \sigma^2_{\epsilon})
+$$
+
+such that $\epsilon_i$ are i.i.d. and there is no intercept.
+
+a.  Find $\tilde{\beta}$ , the MLE of $\beta$.
+b.  Show that the MLE is unbiased. (Note: You must show this directly and may not use the result from part(c).)
+c.  Show how $\tilde{\beta}$ relates to the least-squares estimator.
+
+## Exercise 3
+
+<!--# 11.32 from casella berger-->
+
+## Exercise 4
+
+# Applied exercises
+
+## Instructions
+
+The applied exercises are focused on applying the concepts to analyze data.
+
+**All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.**
+
+Write all narrative using complete sentences and include informative axis labels / titles on visualizations.
+
+# Submission
+
+::: callout-warning
+Before you wrap up the assignment, make sure all documents are updated on your GitHub repo. We will be checking these to make sure you have been practicing how to commit and push changes.
+
+Remember -- you must turn in a PDF file to the Gradescope page before the submission deadline for full credit.
+
+If you write your responses to conceptual exercises by hand, you will need to combine your written work to the completed PDF for the applied exercises before submitting on Gradescope.
+
+Instructions to combine PDFs:
+
+-   Preview (Mac): [support.apple.com/guide/preview/combine-pdfs-prvw43696/mac](https://support.apple.com/guide/preview/combine-pdfs-prvw43696/mac)
+
+-   Adobe (Mac or PC): [helpx.adobe.com/acrobat/using/merging-files-single-pdf.html](https://helpx.adobe.com/acrobat/using/merging-files-single-pdf.html)
+
+    -   Get free access to Adobe Acrobat as a Duke student: [oit.duke.edu/help/articles/kb0030141/](https://oit.duke.edu/help/articles/kb0030141/)
+:::
+
+To submit your assignment:
+
+-   Access Gradescope through the menu on the [STA 221 Canvas site.](https://canvas.duke.edu/courses/38867)
+
+-   Click on the assignment, and you’ll be prompted to submit it.
+
+-   Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be “checked”).
+
+-   Select the first page of your .PDF submission to be associated with the *“Workflow & formatting”* section.
+
+# Grading
+
+| Component             | Points |
+|-----------------------|--------|
+| Ex 1                  | 3      |
+| Ex 2                  | 6      |
+| Ex 3                  | 5      |
+| Ex 4                  | 12     |
+| Ex 5                  | 8      |
+| Ex 6                  | 6      |
+| Ex 7                  | 5      |
+| Ex 8                  | 2      |
+| Bonus (optional)      | +2     |
+| Workflow & formatting | 3      |
+
+The "Workflow & formatting" grade is to assess the reproducible workflow and document format for the applied exercises. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
