--- a/hw/hw-03.qmd
+++ b/hw/hw-03.qmd
@@ -12,13 +12,19 @@ This assignment is due on **Thursday, October 31s at 11:59pm.**
 
 # Introduction
 
-<!--# Update the introduction-->
+In this assignment you will use linear regression to explore the relationship between multiple variables. You will also examine model diagnostics, variable transformations, and maximum likelihood estimation.
 
 # **Learning goals**
 
 In this assignment, you will…
 
-<!--# update the learning goals-->
+-   find maximum likelihood estimators under different scenarios.
+
+-   use model diagnostics to identify influential points.
+
+-   examine multicollinearity and consider strategies to handle it.
+
+-   fit and interpret models with transformed variables.
 
 # **Getting started**
 
@@ -67,20 +73,52 @@ Find the maximum likelihood estimator (MLE) of $\theta$.
 Suppose you have the linear regression model
 
 $$
-y_i = \beta x_i + \epsilon_i \hspace{8mm} \epsilon \sim N(0, \sigma^2_{\epsilon})
+y_i = \beta x_i + \epsilon_i \hspace{8mm} \epsilon_i \sim N(0, \sigma^2_{\epsilon})
 $$
 
 such that $\epsilon_i$ are i.i.d. and there is no intercept.
 
 a.  Find $\tilde{\beta}$ , the MLE of $\beta$.
 b.  Show that the MLE is unbiased. (Note: You must show this directly and may not use the result from part(c).)
-c.  Show how $\tilde{\beta}$ relates to the least-squares estimator.
+c.  Show mathematically how $\tilde{\beta}$ relates to the least-squares estimator.
 
 ## Exercise 3
 
-<!--# 11.32 from casella berger-->
+Suppose there are $n$ observations, such that each $y_i$ is generated from $x_i$ based on the linear model
+
+$$
+y_i = \beta_0 + \beta_1 x_i = \epsilon_i, \hspace{8mm} \epsilon_i \sim N(0, \sigma^2_{\epsilon})
+$$
+
+such that $\epsilon_i$ are i.i.d.
+
+The model is reparameterized (redefined) as
+
+$$
+y_i = \beta^{\prime}_0 + \beta^{\prime}_1(x_i - \bar{x}) + \epsilon_i
+$$
+
+such that $\epsilon_i$ follows the same distribution as the original model.
+
+a.  Show that the MLE of $\beta^{\prime}_1$ is equal to the MLE of $\beta_1$.
+b.   Show that the MLE of $\beta^{\prime}_0$ is <u><b>not</b></u>equal to the MLE of $\beta_0$.
+c.  The predictor in the reparameterized model is **mean-centered**, i.e., the predictor is shifted by its mean value. Based on your responses to parts (a) and (b), what is one potential benefit for using mean-centered predictors in the model?
+
+::: callout-tip
+You do not need to derive the MLEs for $\beta_0$ and $\beta_1$. You may use the results from the notes.
+
+You do need to show your work to derive the MLEs for $\beta^{\prime}_0$ and $\beta^{\prime}_1$ .
+:::
 
 ## Exercise 4
+
+Suppose we have a model of the form
+
+$$
+\log(y_i) =\beta_0 + \beta_1\log(x_i) + \epsilon_i \hspace{10mm} \epsilon_i \sim N(0, \sigma^2_{\epsilon})
+$$
+
+Describe the expected change in $y_i$ when $x_i$ is multiplied by a constant $C$. Show the work used to obtain the expected change.
 
 # Applied exercises
 
@@ -91,6 +129,86 @@ The applied exercises are focused on applying the concepts to analyze data.
 **All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.**
 
 Write all narrative using complete sentences and include informative axis labels / titles on visualizations.
+
+## Data: SAT 
+
+This data set contains the average SAT score (out of 1600) and other variables that may be associated with SAT performance for each of the 50 U.S. states. The data is based on test takers for the 1982 exam. We will use the following variables:
+
+-   **`SAT`**: average total SAT score
+
+-   **`Takers`**: percentage of high school seniors who took exam
+
+-   **`Income`**: median income of families of test-takers (\$ hundreds)
+
+-   **`Years`**: average number of years test-takers had formal education in social sciences, natural sciences, and humanities
+
+-   **`Public`**: percentage of test-takers who attended public high schools
+
+-   **`Expend`**: total state expenditure on high schools (\$ hundreds per student)
+
+-   **`Rank`**: median percentile rank of test-takers within their high school classes
+
+The data are in the file `sat-1982.csv` in the `data` folder.
+
+## Exercise 5
+
+a.  Fit a main effects model using `SAT` as the response and all other variables at the predictors. Neatly display the model using 3 digits.
+b.  Are there any influential observations in the data set? Briefly explain showing any work or output used to make the determination.
+c.  Consider the observation with the highest value for Cook's distance. What is the value of leverage for this observation? Would this be considered large leverage? Briefly explain showing any work or output used to make the determination.
+
+## Exercise 6
+
+a.  Compute the Variance Inflation Factors (VIF) for the model from the previous exercise.
+b.  Does this model have any issues with multicollinearity? If so, what predictors appear to be collinear?
+c.  If multicollinearity is present, select a strategy to fit a model that does not have an issue with multicollinearity.
+    -   Briefly describe your strategy.
+    -   Select a final model.
+    -   Briefly explain your selection, showing any work and output used to choose a model.
+
+## Data: **2000 U.S. Presidental Election**
+
+We will examine data about the [2000 U.S. presidential election](https://en.wikipedia.org/wiki/2000_United_States_presidential_election) between George W. Bush and Al Gore. It was one of the closest elections in history that ultimately came down to the state of Florida. One county in particular, Palm Beach County, was at the center of the controversy due to the design of their ballots - the infamous [butterfly ballots](http://news.bbc.co.uk/2/hi/in_depth/americas/2000/us_elections/glossary/a-b/1037172.stm). It is believed that many people who intended to vote for Al Gore accidentally voted for Pat Buchanan due to how the spots to mark the candidate were arranged next to the names.
+
+The variables in the data are
+
+-   `County`: County name
+
+-   `Bush2000`: Number of votes for George W. Bush
+
+-   `Buchanan2000`: Number of votes for Pat Buchanan
+
+The data are available in the file `florida-votes-2000.csv` in the `data` folder of your repo.
+
+## Exercise 7
+
+The goal is to fit a model that uses the number of votes for Bush to predict the number of votes for Buchanan. Using this model, we’ll investigate whether the data support the claim that votes for Gore may have accidentally gone to Buchanan.
+
+a.  Visualize the relationship between the number of votes for Buchanan versus the number of votes for Bush. Describe what you observe in the visualization, including a description of the relationship between the votes for Buchanan and votes for Bush.
+b.  What is the county with the extreme outlier number of votes for Buchanan? Create a new data frame that doesn’t include the outlying county. **You will use this updated data frame for the remainder of this exercise.**
+c.  Fit a model to predict the number of votes for Buchanan based on the number of votes for Bush in the county.
+    -   Make a plot of the standardized residuals versus the fitted values.
+    -   Is the constant variance condition satisfied? Briefly explain.
+
+## Exercise 8
+
+Now let's consider potential models with transformations on the response and/or predictor variables. The four candidate models are the following:
+
+| Model                      | Response variable | Predictor variable |
+|----------------------------|-------------------|--------------------|
+| 1 (from previous exercise) | Buchanan2000      | Bush2000           |
+| 2                          | log(Buchanan2000) | Bush2000           |
+| 3                          | Buchanan2000      | log(Bush2000)      |
+| 4                          | log(Buchanan2000) | log(Bush2000)      |
+
+Which model best fits the data? Briefly explain, showing any work and output used to determine the response.
+
+## Exercise 9
+
+-   Use the model you chose in the previous question to predict the number of votes for Buchanan in the outlying county identified in Exercise 7.
+
+-   Compute the standardized residual for this observation.
+
+-   It is assumed that some of the votes for Buchanan in that county were actually intended to be for Gore. Based on your results in the previous question, does your model support this claim? Briefly explain.
 
 # Submission
 
@@ -125,14 +243,14 @@ To submit your assignment:
 | Component             | Points |
 |-----------------------|--------|
 | Ex 1                  | 3      |
-| Ex 2                  | 6      |
-| Ex 3                  | 5      |
-| Ex 4                  | 12     |
-| Ex 5                  | 8      |
-| Ex 6                  | 6      |
-| Ex 7                  | 5      |
-| Ex 8                  | 2      |
-| Bonus (optional)      | +2     |
+| Ex 2                  | 9      |
+| Ex 3                  | 9      |
+| Ex 4                  | 3      |
+| Ex 5                  | 5      |
+| Ex 6                  | 5      |
+| Ex 7                  | 6      |
+| Ex 8                  | 3      |
+| Ex 9                  | 4      |
 | Workflow & formatting | 3      |
 
 The "Workflow & formatting" grade is to assess the reproducible workflow and document format for the applied exercises. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
