--- a/labs/lab-04.qmd
+++ b/labs/lab-04.qmd
@@ -166,7 +166,7 @@ $$
 
 To wrap up, we have seen that both the OLS and the maximum likelihood procedures for linear regression produce the same coefficient estimates, but lead to different estimators for the variance $\sigma_\epsilon^2$ and allow for different types of uncertainty quantification.
 
-Based on the work in this lab, do you think performing inference based on either method would have changed your conclusions about the difference (or lack thereof) in the relationship between bill depth and species? Briefly explain.
+Based on the work in this lab, do you think performing inference based on either method would have changed your conclusions about the the relationship between bill depth and Chinstrap species?
 
 # Submission
 
